Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 2.0 =
*

= 1.2.5.8 =
* Fixed issues with WooCommerce sale price
* Added check for course category specific templates (i.e. archive-course-categoryslug.php)

= 1.2.5.7 =
* Fixed fatal error with single site setups

= 1.2.5.6 =
* Fixed redirection issue with multisite installations.

= 1.2.5.5 =
* Fixed issues with assessment, students and instructors tables being empty after WordPress 4.2 update.
* Fixed error message when submitting mandatory quiz items.
* Fixed error on setting a course category when first created.
* Fixed HTML showing on discussion page.
* Fixed Instructor capabilities not always saving.
* Improved handling of Virtual Pages and Custom Pages for CoursePress settings.


= 1.2.5.4 =
* Fixed issue with marking a order as paid with Manual Payments
* Fixed issue with Virtual pages
* Added additional hooks for developers
* Integration with WooCommerce (CoursePress > Settings > WooCommerce Integration)

= 1.2.5.3 =
* Security Update: Fixed possible WordPress XSS bug
* Fixed clearfix div
* Fixed broken virtual pages

= 1.2.5.2 =
* Fix missing class error for CoursePress Standard (free).

= 1.2.5.1 =
* Added basic certificate functionality to CoursePress Pro (templates planned for future release).
* Added additional capabilities for instructors
* Added formatting to the instructor single page
* Changed default 'subscriber' role for students to be actual default WordPress role set
* Fixed issue with enrolling a student to a paid course (paid via PayPal chained payments)
* Fixed issue with mandatory, assessable and limit attempts options (if once checked then unchecked)
* Fixed issue with uncompleted course even if unit elements (answer fields) were completed
* Fixed issue: Course Pre-Requisite still showing after required course completed
* Fixed theme translation issues